# DeepStream

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILD.md  CHANGELOG.md  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  build.sh  print_env.sh  sonar-project.properties
.agents/skills/: README.md
.claude/: example_prompts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yml  config.yml  documentation_request_correction.yml  documentation_request_new.yml  feature_request.md  feature_request_form.yml  submit-question.md
.github/workflow-templates/: add_issue_to_project_raw.yml
.ngci/: Jenkinsfile
deepstream_dockers/: README.md  buildjet.sh  buildx86.sh  get_optel_pkgs.sh  setup_jetson_build.sh  setup_x86_build.sh  setup_x86_cross_compile_jetson.sh
deepstream_dockers/jetson_dockerfiles/: Dockerfile_Jetson_Devel  Dockerfile_Jetson_Run
deepstream_dockers/jetson_specific_files/: user_additional_install_runtime.sh  user_deepstream_python_apps_install.sh
deepstream_dockers/x86_64_specific_files/: user_additional_install_devel.sh  user_additional_install_runtime.sh  user_deepstream_python_apps_install.sh
deepstream_dockers/x86_dockerfiles/: Dockerfile_samples_x86  Dockerfile_triton_x86
example_prompts/: ds_profiling_efficient_pipeline.md  import_vision_model_detection_pipeline.md  msgbroker_nats.md  msgconv_kafka.md  nvdsanalytics_config_sample.md  nvdsdynamicsrcbin_app.md  single_view_3d_tracker.md  video_parallel_infer_app.md
includes/: CivetServer.h  INvDsAllocator.h  NVWarp360.h  NvDsMemoryAllocator.h  gst-nvcommon.h  gst-nvdscommonconfig.h  gst-nvdscustomevent.h  gst-nvdssr.h  gst-nvevent.h  gst-nvmessage.h  gst-nvmultiurisrcbincreator.h  gst-nvquery-internal.h  gst-nvquery.h  gst_nvdsaudio.h  gstnvdsbufferpool.h  gstnvdsinfer.h  gstnvdsmeta.h  gstnvdsseimeta.h  gstnvvideotestsrc.h  half.hpp  nv_aisle_csvparser.hpp  nv_spot_csvparser.hpp  nvbufaudio.h  nvbufsurface.h  nvbufsurftransform.h  nvds_analytics_meta.h  nvds_appctx_server.h  nvds_audio_meta.h  nvds_dewarper_meta.h  nvds_latency_meta.h  nvds_latency_meta_internal.h  nvds_logger.h  nvds_mask_utils.h  nvds_mqtt_proto.h  nvds_msgapi.h  nvds_obj_encode.h  nvds_opticalflow_meta.h  nvds_rest_server.h  nvds_roi_meta.h  nvds_stats.h  (+29 more)
includes/ds3d/common/: abi_dataprocess.h  abi_frame.h  abi_obj.h  abi_window.h  common.h  config.h  defines.h  func_utils.h  idatatype.h  lidar_3d_datatype.h  type_trait.h  typeid.h
includes/ds3d/gst/: nvds3d_gst_ptr.h  nvds3d_meta.h  nvds3d_pipeline_context.h
includes/nvdsinferserver/: infer_custom_process.h  infer_datatypes.h  infer_defines.h  infer_icontext.h  infer_ioptions.h  infer_options.h  infer_post_datatypes.h
scripts/: install.sh  install_artifacts.sh  install_opensource_deps.sh  prepare_classification_test_video.sh  prepare_ds_triton_model_repo.sh  prepare_ds_triton_tao_model_repo.sh  print_env.sh  triton_backend_setup.sh  uninstall.sh
scripts/rtpmanager/: 0001-rtspsrc-Fixes-related-to-slow-rtsp-inputs.patch  0002-rtspsrc-Resolve-hang-delete-rtsp-when-stream-ends-bug-5939802.patch  h264parser-Avoid-meta-parsing-conditionally.patch  update_rtpmanager.sh
skills/: README.md
skills/amc-run-rtsp-calibration/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/amc-run-rtsp-calibration/evals/: evals.json
skills/amc-run-rtsp-calibration/scripts/: run_rtsp_calibration.py
skills/deepstream-run-mv3dt/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/deepstream-run-mv3dt/evals/: evals.json
skills/deepstream-run-mv3dt/references/: amc-calibration-handoff.md  custom-dataset.md  generate-configs.md  sample-run.md  setup.md  visualization-metadata.md
skills/deepstream-sop/: SKILL.md
skills/deepstream-sop/.claude-plugin/: plugin.json
skills/deepstream-sop/references/: skill_05_triton_ddm_model.md  triton_model_reference.py
src/: .gitignore  README.md  Rules.mk
src/apps/reference_apps/: .gitattributes  README.md
src/apps/sample_apps/: README.md  Rules.mk
src/apps/sample_apps/TritonBackendEnsemble/nvds_triton_cpp_custom_backend/: CMakeLists.txt
src/apps/sample_apps/TritonBackendEnsemble/nvds_triton_cpp_custom_backend/cmake/: TutorialRecommendedBackendConfig.cmake.in
src/apps/sample_apps/TritonBackendEnsemble/nvds_triton_cpp_custom_backend/src/: libtriton_recommended.ldscript  recommended.cc
src/apps/tao_apps/: .gitattributes  Makefile  README.md  build_triton_engine.sh  download_models.sh  triton_server.md  triton_server_grpc.md
src/gst-plugins/: README.md  Rules.mk
src/gst-plugins/gst-dsexample/: Makefile  README  gstdsexample.cpp  gstdsexample.h  gstdsexample_optimized.cpp  gstdsexample_optimized.h
src/gst-plugins/gst-dsexample-cuda/: Makefile  README  gstdsexample_cuda.cpp  gstdsexample_cuda.h
src/gst-plugins/gst-nvdewarper/: Makefile  README  gstnvdewarper.cpp  gstnvdewarper.h  nvdewarper.cpp  nvdewarper.h  nvdewarper_property_parser.cpp  nvdewarper_property_parser.h
src/gst-plugins/gst-nvdsanalytics/: Makefile  README  gstnvdsanalytics.cpp  gstnvdsanalytics.h  nvds_analytics.h  (+4 more)
src/service-maker/: README.md
src/service-maker/sources/modules/lidar_feeder/: CMakeLists.txt  lidar_feeder.cpp  lidar_feeder.hpp
src/service-maker/sources/modules/resnet_tensor_parser/: CMakeLists.txt  resnet_tensor_parser.cpp  resnet_tensor_parser.hpp
src/service-maker/sources/modules/smart_recording_signal/: CMakeLists.txt  smart_recording_signal.cpp
src/utils/: README.md
src/utils/ds3d/: README.md
tools/deepstream-host-provisioning/: README.md  inventory.ini  ubuntu_setup.yml
tools/deepstream-otelcol/: README.md  otel-collector-config.yaml  setup-collector.sh  start-collector.sh
tools/sam2-onnx-tensorrt/: export_sam2_onnx.py
tools/yolo_deepstream/: README.md
tools/yolo_deepstream/tensorrt_yolo/: CMakeLists.txt  test_coco_map.py
tools/yolo_deepstream/tensorrt_yolo/samples/: detect.cpp  validate_coco.cpp  video_detect.cpp
tools/yolo_deepstream/tensorrt_yolo/src/: Yolo.cpp  Yolo.h  argsParser.cpp  argsParser.h  tools.h
(+1529 files in other folders)
